# vuteco

./: .gitignore  README.md
config/: vutecokb.json
examples/: input.csv
scripts/: analyze_experiment.py  analyze_inthewild.py  analyze_overlaps.py  evaluate_e2e.py  evaluate_single.py  export_e2e.py  export_single.py  prepare_for_inthewild.py  test4vul.py  vuteco.py
scripts/common/: cli_args.py  constants.py  global_vars.py  load_dataset.py  utils_mining.py  utils_training.py
scripts/evaluation/: evaluate_nn.py  evaluate_terms_mtc.py  evaluate_vocab_fnd.py
scripts/modeling/: modeling_grep_fnd.py  modeling_lm_common.py  modeling_lm_e2e.py  modeling_lm_fnd.py  modeling_lm_lnk.py  modeling_nn_e2e.py  (+2 more)
vuteco/: pyproject.toml  requirements.txt
vuteco/src/: build_vutecokb.py  collect_vul4j_tests.py  evaluate_e2e.py  evaluate_single.py  export_e2e.py  export_single.py
vuteco/src/common/: args_to_config.py  augment_data.py  cli_args.py  cli_constants.py
vuteco/src/core/common/: args_to_config.py  augment_data.py  cli_args.py  cli_constants.py  load_dataset.py  utils_mining.py  utils_training.py
vuteco/src/core/modeling/: modeling_common.py  modeling_fix.py  modeling_fl.py  modeling_grep_fnd.py  modeling_grep_mtc.py  modeling_lm_common.py  modeling_lm_e2e.py  modeling_lm_fnd.py  modeling_lm_lnk.py  modeling_nn_common.py  modeling_nn_e2e.py  modeling_nn_fnd.py  modeling_nn_lnk.py  modeling_sim_mtc.py  modeling_terms_mtc.py  modeling_vocab_fnd.py
vuteco/src/evaluation/: evaluate_common.py  evaluate_fix.py  evaluate_grep_fnd.py  evaluate_grep_mtc.py  evaluate_lm.py  evaluate_sim_mtc.py
vuteco/src/main/: cli.py  vuteco_domain.py
vuteco/src/modeling/: modeling_common.py  modeling_fix.py  modeling_fl.py  modeling_grep_mtc.py  modeling_nn_common.py  modeling_nn_fnd.py  modeling_sim_mtc.py  modeling_vocab_fnd.py
vuteco/src/train/: analyze_experiment.py  analyze_inthewild.py  analyze_overlaps.py  build_vutecokb.py  collect_vul4j_tests.py  evaluate_e2e.py  evaluate_single.py  export_e2e.py  export_single.py  prepare_for_inthewild.py  test4vul.py
vuteco/src/train/evaluation/: evaluate_common.py  evaluate_fix.py  evaluate_grep_fnd.py  evaluate_grep_mtc.py  evaluate_lm.py  evaluate_nn.py  evaluate_sim_mtc.py  evaluate_terms_mtc.py  evaluate_vocab_fnd.py
vuteco/src/train/training/: fit_vocab_fnd.py  save_grep_fnd.py  save_grep_mtc.py  save_sim_mtc.py  save_terms_mtc.py  train_lm.py  train_nn.py
vuteco/src/training/: fit_vocab_fnd.py  save_grep_fnd.py  save_sim_mtc.py  save_terms_mtc.py
vuteco/src/vuteco/: cli.py  vuteco_domain.py
vuteco/src/vuteco/core/common/: args_to_config.py  augment_data.py  cli_args.py  cli_constants.py  constants.py  load_dataset.py  resources.py  utils_mining.py  utils_training.py
vuteco/src/vuteco/core/modeling/: modeling_common.py  modeling_fix.py  modeling_fl.py  modeling_grep_fnd.py  modeling_grep_mtc.py  modeling_lm_common.py  modeling_lm_e2e.py  modeling_lm_fnd.py  modeling_lm_lnk.py  modeling_nn_common.py  modeling_nn_e2e.py  modeling_nn_fnd.py  modeling_nn_lnk.py  modeling_sim_mtc.py  modeling_terms_mtc.py  modeling_vocab_fnd.py
vuteco/src/vuteco/main/: cli.py  starter.py  vuteco_domain.py
vuteco/src/vuteco/train/: build_vutecokb.py  collect_vul4j_tests.py  evaluate_e2e.py  evaluate_single.py  export_e2e.py  export_single.py
vuteco/src/vuteco/train/evaluation/: evaluate_common.py  evaluate_fix.py  evaluate_grep_fnd.py  evaluate_grep_mtc.py  evaluate_lm.py  evaluate_nn.py  evaluate_sim_mtc.py  evaluate_terms_mtc.py  evaluate_vocab_fnd.py
vuteco/src/vuteco/train/training/: fit_vocab_fnd.py  save_grep_fnd.py  save_grep_mtc.py  save_sim_mtc.py  save_terms_mtc.py  train_lm.py  train_nn.py
(+4 files in other folders)
